apps/vaultwarden/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vaultwarden
    spec:
      nodeSelector:
        kubernetes.io/hostname: helium
      containers:
        - name: vaultwarden
          image: vaultwarden/server:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /alive
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /alive
              port: http
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden-data
